static/css/main.css
html, body {
    height: 100%;  
    font-family: quattrocento sans,sans-serif;
}

body {
    padding-top: 55px;
    display: flex;
    text-align: center;
    flex-direction: column;
    
}

main {
    margin: auto;
    margin-top:3em;
    background-color: #353b43;
    padding: 25px;
    flex: 1 0 auto;
    max-width: 750px;
}

p{
    font-size: 1.8rem;
}

img {
    max-width: 100%;
}

/* Homepage */

.intro {
    transform: translateY(22vh);
}

.intro > h1 {
    font-family: "M PLUS Rounded 1c", sans;
    color: white;
    font-size: 12vh;
}

.intro > h2 {
    font-family: "M PLUS Rounded 1c", sans;
    color: #757575;
    font-size: 3vmin;
}

/* Page content */

.content {
    padding-top: 20px;
    
}

.content img{
    width: 20vh;
    height: 20vh;
    border-radius: 50%;
    float:left;
    margin:1vh;
    border: 5px solid #fd9b74;
}

h1, h3, h4, h5, h6{
    color: #afbac4;
}

h2{
    color:#fd9b74;
}
.content p{
    color:#737f8a;
}



/* Profile picture */

.profile {
    width: 10vh;
    height: 10vh;
    border-radius: 50%;
}

/* Colored links */

a:link, a:visited {
    color: var(--accent);
}

a.icon:hover {
    text-decoration: none;
}

a:hover {
    color: var(--accent) !important;
}


.navbar-nav li{
    font-size:1.8vh;
}
/* Copyright message */

.copyright {
    margin: 15px 0;
}

/* Paginator */

.pages {
    padding: 15px 0;
}

.pages-icon {
    padding: 0 15px;
}

/* List item for posts/projects */

.item {
    padding: 10px 0;
}

.item-tag {
    background-color: var(--accent);
}

/* Navigation icons */

.navbar-icon {
    font-size: 125%;
    display: inline-block !important;
}

/* Colored borders at top/bottom of page */

.navbar.navbar-default {
    border-top: var(--border-width) solid var(--accent);
}

footer {
    border-bottom: var(--border-width) solid var(--accent);
}

.site-hero-content ul{
    margin-top: 3em;
}

.site-hero-content-buttons {
    margin: 0;
    padding: 0;
}

.site-hero-content-buttons li:not(:last-child) {
    margin-right: 30px;
}
.site-hero-content-buttons li {
    display: inline-block;
}

.btn {
    border: none;
    color: #fff !important;
    padding: 20px 45px;
    border-radius: 5;
    background: #fd9b74;
}

.btn:hover{
    border-color:#204d74;
    background-color:#286090;
}

/* Font Awesome styling */
.inline-svg {
    display: inline-block;
    height: 1.15rem;
    width: 1.15rem;
    top: 0.3rem;
    margin:0.2rem;
    position: relative;
  }

.intro .inline-svg{
    height:6rem;
    width:6rem;
    top:1.5rem;
}

